--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,8 @@
 
 </head>
 <body>
-
-<%= yield %>
-	<script type="text/javascript" charset="utf-8">
-	 
-	   
-	</script>
+  <div class="container">
+    <%= yield %>
+  </div>
 </body>
 </html>
