--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -1,29 +1,29 @@
 <script type="text/javascript" charset="utf-8">
-  var room = "<%= @room %>"
+  var room = "<%= @room %>";
   var channel = pusher.subscribe(room);
+
   channel.bind('userjoinroom', function(data) {
-        // Let's check if the browser supports notifications
+
         if (!("Notification" in window)) {
           alert("This browser does not support desktop notification");
         }
-
-        // Let's check if the user is okay to get some notification
         else if (Notification.permission === "granted") {
-          // If it's okay let's create a notification
           var notification = new Notification(data.newuseralert);
         }
-
-        // Otherwise, we need to ask the user for permission
         else if (Notification.permission !== 'denied') {
           Notification.requestPermission(function (permission) {
-            // If the user is okay, let's create a notification
             if (permission === "granted") {
               var notification = new Notification(data.newuseralert);
             }
           });
         }
-      }
-  
+      })
+
 </script>
 
 
+<div class="header row">
+  <div class="col s12 center-align">
+   <h1> Welcome to the chat</h1>
+  </div>
+</div>
