pre-heroku push

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,10 @@
  *
  *= require_tree .
  *= require_self
- */
+ //= require foundation_and_overrides
 
- @import "materialize";
+ */
+ .mainnav{
+ 	margin-left: 2%;
+ }
 
