--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -1,13 +1,10 @@
 <script type="text/javascript" charset="utf-8">
-  var room = "<%= @room %>";
+  var room = "<%= @room.name %>";
   var channel = pusher.subscribe(room);
 
   channel.bind('userjoinroom', function(data) {
         if (!("Notification" in window)) {
           alert("This browser does not support desktop notification");
-        }
-        else if (Notification.permission === "granted") {
-          var notification = new Notification(data.newuseralert);
         }
         else if (Notification.permission !== 'denied') {
           Notification.requestPermission(function (permission) {
@@ -16,13 +13,13 @@
             }
           });
         }
-      })
-
+      });
 </script>
 
 
 <div class="header row">
-  <div class="col s12 center-align">
+  <div class="small-12 columns text-center">
    <h1> Welcome to the chat</h1>
   </div>
 </div>
+
