--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,8 +12,12 @@
  *
  *= require_tree .
  *= require_self
- //= require foundation_and_overrides
 
  */
 
 @import "materialize";
+
+body{
+	padding-top: 2%;
+}
+
