--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -4,3 +4,9 @@
 .userbar{
 	margin: 1%;
 }
+
+body{
+	background: image-url('musicbackground.jpg') no-repeat center center;
+	width: 100%;
+	background-color: rgba(0,0,0,0.5);
+}
