--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,9 @@
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
-
-<body>
-
-  <%= yield %>
-
-</body>
+<div class="backwrapper">
+  <body>
+    <%= yield %>
+  </body>
+</div>
 </html>
