--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -6,7 +6,13 @@
 }
 
 body{
-	background: image-url('musicbackground.jpg') no-repeat center center;
 	width: 100%;
 	background-color: rgba(0,0,0,0.5);
+}
+	
+.useravatar{
+	height: 9vh;
+	width: 9vh;
+	margin-right: 2px;
+
 }
