--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -9,10 +9,12 @@ body{
 	width: 100%;
 	background-color: rgba(0,0,0,0.5);
 }
-	
+.userbutton{
+	// font-size: 4vh;
+	width: 15vw;
+}
 .useravatar{
 	height: 9vh;
 	width: 9vh;
-	margin-right: 2px;
-
+	
 }
