--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -1,5 +1,5 @@
   <div class="userbar left col s6">
-      <%= react_component 'UserList', {users: @users, user: current_user, room: @room.name}, {prerender: true} %>
+      <%= react_component 'UserList', {users: @users, user: current_user, room: @room.name} %>
   </div>
 
   <div class="container">
